# crabtrack

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  codebook.toml  example.config.toml
.beads/: issues.jsonl
.claude/: settings.local.json
src/: config.rs  database.rs  main.rs  observer.rs  pass_prediction.rs  radio.rs  satellite.rs  ui.rs
