[package]
name = "crabtrack"
version = "0.4.0"
edition = "2024"

[dependencies]
# Satellite tracking
sgp4 = "2.3"

# Time handling
chrono = "0.4.42"
hifitime = "4.2.3"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Math
nalgebra = "0.34.1"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Database
duckdb = { version = "1.1", features = ["bundled"] }

# Platform directories
dirs = "5.0"

# HTTP client for TLE downloads
ureq = { version = "2.10", features = ["tls"] }
